# IPTV

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  e.xml  epg.py  iptv.py  iptv.sh  iptv_unicom.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  cleanup.yml  epg.yml  iptv.yml  iptv_hotel_ip.yml  iptv_hotel_playlist.yml  iptv_udpxy_ip.yml  iptv_udpxy_playlist.yml  iptv_udpxy_rtp.yml  pull_request_lint.yml
ip/hotel/中国电信/: 云南.txt  吉林.txt  四川.txt  安徽.txt  山东.txt  山西.txt  广东.txt  广西.txt  江苏.txt  江西.txt  河北.txt  河南.txt  浙江.txt  海南.txt  湖北.txt  湖南.txt  福建.txt  辽宁.txt  重庆.txt  黑龙江.txt
ip/hotel/中国联通/: 云南.txt  北京.txt  吉林.txt  四川.txt  天津.txt  安徽.txt  山东.txt  山西.txt  江西.txt  河北.txt  河南.txt  浙江.txt  海南.txt  湖北.txt  湖南.txt  福建.txt  辽宁.txt  重庆.txt  陕西.txt
ip/udpxy/中国电信/: 安徽.txt  山东.txt  山西.txt  河北.txt  浙江.txt  贵州.txt  陕西.txt
ip/udpxy/中国联通/: 天津.txt  山东.txt  山西.txt  河北.txt  河南.txt  浙江.txt  湖北.txt  辽宁.txt  重庆.txt  黑龙江.txt
iptv/: base.py  config.py  hotel.py  playwright.py  udpxy.py
m3u/: CCTV.m3u  CNTV.m3u  IPTV.m3u  Live.m3u  MyTV.m3u  bilibili.m3u  douyin.m3u  douyu.m3u  huya.m3u  test.m3u  yy.m3u
rtp/中国电信/: 广东.txt
rtp/中国联通/: 重庆.txt
txt/: About.txt  Animated.txt  CCTV.txt  CNTV.txt  Chunwan.txt  Documentary.txt  Hot.txt  IPTV.txt  LiveChina.txt  Local.txt  MiGu.txt  Movie.txt  NewTV.txt  Panda.txt  SITV.txt  Shuzi.txt  Sport.txt  YouTube.txt  YouTube2.txt  fm.txt  hk.txt  iHOT.txt  lunbo.txt  maiduidui.txt  tw.txt
txt/hotel/: 全国.txt
txt/hotel/中国电信/: 云南.txt  吉林.txt  四川.txt  安徽.txt  山东.txt  山西.txt  广东.txt  广西.txt  江苏.txt  江西.txt  河北.txt  河南.txt  浙江.txt  湖北.txt  湖南.txt  福建.txt
txt/live/: 4gtv.txt  Smartv.txt  SpecialLine.txt  hl.txt  itv.txt  sxg.txt  youtube.txt
txt/udpxy/: 全国.txt
(+57 files in other folders)
